Add option to create sub set of data base on constraints.

--- a/Notebooks/Analyzer_100.ipynb
+++ b/Notebooks/Analyzer_100.ipynb
@@ -46,7 +46,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "cMB8T39CuJ2Y",
-        "outputId": "eef8434a-e61a-4672-dfa9-65981d5eb475"
+        "outputId": "6da8b0eb-62ec-468f-c1ed-c9b086456e55"
       },
       "source": [
         "import numpy as np\n",
@@ -100,7 +100,7 @@
           "output_type": "stream",
           "text": [
             "On Google CoLab, mount cloud-local file, get our code from GitHub.\n",
-            "Mounted at /content/drive/\n"
+            "Drive already mounted at /content/drive/; to attempt to forcibly remount, call drive.mount(\"/content/drive/\", force_remount=True).\n"
           ],
           "name": "stdout"
         }
@@ -125,7 +125,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "37JnfHgWt_-U",
-        "outputId": "f1747266-7dc3-41f2-ce6d-e71355bf3c06"
+        "outputId": "88775437-0304-4371-f794-bc4d1e5e43cb"
       },
       "source": [
         "PC_FILENAME='gencode.v38.pc_transcripts.fa.gz'\n",
@@ -144,7 +144,7 @@
         "ncdf=loader.load_file(NC_FULLPATH)\n",
         "print(\"NC seqs loaded:\",len(ncdf))"
       ],
-      "execution_count": 3,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "stream",
@@ -163,9 +163,99 @@
       },
       "source": [
         "##Process Sequences\n",
-        "Sampling, binning, length constraints, etc.\n",
+        "Sampling, binning, length constraints, etc.\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "6V7WMCLN3l1q"
+      },
+      "source": [
+        "APPLY_SUBSET = True             #Option to subset the data\n",
+        "MINIMUM_SEQUENCE_LENGTH = 0     #Minimum inclusive length to filter out sequences by\n",
+        "MAXIMUM_SEQUENCE_LENGTH = 4000  #Maximum inclusive length to filter out sequences by\n",
+        "SAMPLE_FRACTION = 0.5           #What fraction of the GenCode data set to take a sample of\n",
+        "REPRODUCABILITY_SEED = 314159   #Use to reproduce random sampling"
+      ],
+      "execution_count": 3,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "ANtZknso53FT",
+        "outputId": "845c3cc5-66c7-4e2d-a27f-209e5334891b"
+      },
+      "source": [
+        "if APPLY_SUBSET:\n",
+        "  pcdf = pcdf.sample(frac=SAMPLE_FRACTION, random_state=REPRODUCABILITY_SEED)\n",
+        "  ncdf = ncdf.sample(frac=SAMPLE_FRACTION, random_state=REPRODUCABILITY_SEED)\n",
         "\n",
-        "TODO\n"
+        "  print('PC sample size:', len(pcdf))\n",
+        "  print('NC sample size:', len(ncdf))"
+      ],
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "PC sample size: 35412\n",
+            "NC sample size: 24376\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "7ga4K3Aw4sJd"
+      },
+      "source": [
+        "def subset_list_by_len_bounds(input_list, min_len, max_len):\n",
+        "  return list(filter(lambda x: len(x) > min_len and len(x) <= max_len, input_list))"
+      ],
+      "execution_count": 5,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "D7pejW0g1lnR",
+        "outputId": "80df6f44-14c9-45a0-e7c3-2c65e4a7c8ef"
+      },
+      "source": [
+        "pc_sequences = pcdf_sample['sequence'].tolist()\n",
+        "nc_sequences = ncdf_sample['sequence'].tolist()\n",
+        "\n",
+        "if APPLY_SUBSET:\n",
+        "  pc_sequences = subset_list_by_len_bounds(pc_sequences, MINIMUM_SEQUENCE_LENGTH, MAXIMUM_SEQUENCE_LENGTH)\n",
+        "  nc_sequences = subset_list_by_len_bounds(nc_sequences, MINIMUM_SEQUENCE_LENGTH, MAXIMUM_SEQUENCE_LENGTH)\n",
+        "\n",
+        "  print('PC seqs in length range','('+str(MINIMUM_SEQUENCE_LENGTH),'-',str(MAXIMUM_SEQUENCE_LENGTH)+'):', len(pc_sequences))\n",
+        "  print('NC seqs in length range','('+str(MINIMUM_SEQUENCE_LENGTH),'-',str(MAXIMUM_SEQUENCE_LENGTH)+'):', len(nc_sequences))\n",
+        "\n",
+        "#Garbage collection\n",
+        "pcdf = None\n",
+        "ncdf = None"
+      ],
+      "execution_count": 6,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "PC seqs in length range (0 - 4000): 27717\n",
+            "NC seqs in length range (0 - 4000): 23582\n"
+          ],
+          "name": "stdout"
+        }
       ]
     },
     {
@@ -184,7 +274,7 @@
         "id": "4pFBfhxPvkxI"
       },
       "source": [
-        "##Generate Plots and Results\n",
+        "##Results\n",
         "TODO"
       ]
     }
