Set up PlotGenerator and fix bug.

--- a/Notebooks/Analyzer_100.ipynb
+++ b/Notebooks/Analyzer_100.ipynb
@@ -46,7 +46,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "cMB8T39CuJ2Y",
-        "outputId": "6da8b0eb-62ec-468f-c1ed-c9b086456e55"
+        "outputId": "0b8680bc-6d4a-48a2-c79b-cbb053e20959"
       },
       "source": [
         "import numpy as np\n",
@@ -125,7 +125,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "37JnfHgWt_-U",
-        "outputId": "88775437-0304-4371-f794-bc4d1e5e43cb"
+        "outputId": "5822cfa9-e451-4bc8-9643-ee32b2ebba0d"
       },
       "source": [
         "PC_FILENAME='gencode.v38.pc_transcripts.fa.gz'\n",
@@ -188,7 +188,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "ANtZknso53FT",
-        "outputId": "845c3cc5-66c7-4e2d-a27f-209e5334891b"
+        "outputId": "1e69b7a9-4b3b-428d-9b60-b11e0d2d7005"
       },
       "source": [
         "if APPLY_SUBSET:\n",
@@ -229,11 +229,11 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "D7pejW0g1lnR",
-        "outputId": "80df6f44-14c9-45a0-e7c3-2c65e4a7c8ef"
+        "outputId": "4878585b-d8ca-4278-9771-fcc2bb342dca"
       },
       "source": [
-        "pc_sequences = pcdf_sample['sequence'].tolist()\n",
-        "nc_sequences = ncdf_sample['sequence'].tolist()\n",
+        "pc_sequences = pcdf['sequence'].tolist()\n",
+        "nc_sequences = ncdf['sequence'].tolist()\n",
         "\n",
         "if APPLY_SUBSET:\n",
         "  pc_sequences = subset_list_by_len_bounds(pc_sequences, MINIMUM_SEQUENCE_LENGTH, MAXIMUM_SEQUENCE_LENGTH)\n",
@@ -277,6 +277,29 @@
         "##Results\n",
         "TODO"
       ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "8hWYWuiIeSqR"
+      },
+      "source": [
+        "data_set_names = ['mRNA', 'lncRNA']"
+      ],
+      "execution_count": 7,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "Knmk7fK5dskT"
+      },
+      "source": [
+        "pg = PlotGenerator()\n",
+        "pg.set_text_options(45, 'right', 0, 'center', 12)"
+      ],
+      "execution_count": 8,
+      "outputs": []
     }
   ]
 }
