Start graph project.

--- a/Notebooks/Graph_100.ipynb
+++ b/Notebooks/Graph_100.ipynb
@@ -69,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -81,29 +81,28 @@
     "                    exclude.append(i)\n",
     "    return exclude\n",
     "def show_path_name(intlist):\n",
-    "    name=''\n",
     "    for i in intlist:\n",
-    "        name = name + NODES[i]\n",
-    "    return name"
+    "        print(i,NODES[i])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "vwx\n"
+      "1 v\n",
+      "2 w\n",
+      "3 x\n"
      ]
     }
    ],
    "source": [
     "U = list_paths_from(G,u,[])\n",
-    "NU = show_path_name(U)\n",
-    "print(NU)"
+    "show_path_name(U)"
    ]
   },
   {
