--- a/Notebooks/Graph_100.ipynb
+++ b/Notebooks/Graph_100.ipynb
@@ -69,40 +69,108 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def list_paths_from(graph,node,exclude):\n",
-    "    for i in range(0,nodecount):\n",
-    "        if i!=node:\n",
-    "            if graph[node,i]>0:\n",
-    "                if i not in exclude:\n",
-    "                    exclude.append(i)\n",
-    "    return exclude\n",
-    "def show_path_name(intlist):\n",
-    "    for i in intlist:\n",
-    "        print(i,NODES[i])"
+    "def list_paths_from(graph,this_path,all_paths):\n",
+    "    this_node=this_path[-1]\n",
+    "    for i in range(0,len(graph)):\n",
+    "        if i not in this_path: # avoid cycles\n",
+    "            if graph[this_node,i]>0: # positive weight => adjacency\n",
+    "                next_path = this_path.copy()\n",
+    "                next_path.append(i)\n",
+    "                #print(\"this_path\",this_path)\n",
+    "                #print(\"next_path\",next_path)\n",
+    "                all_paths.append(next_path)\n",
+    "                all_paths = list_paths_from(graph,next_path,all_paths)\n",
+    "    return all_paths\n",
+    "def get_path_name(one_path):\n",
+    "    pname=''\n",
+    "    for i in one_path:\n",
+    "        pname = pname + NODES[i]\n",
+    "    return pname\n",
+    "def show_all_paths(paths):\n",
+    "    for p in paths:\n",
+    "        print(get_path_name(p))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1 v\n",
-      "2 w\n",
-      "3 x\n"
+      "u\n",
+      "uv\n",
+      "uvw\n",
+      "uvwx\n",
+      "uvwxy\n",
+      "uvwxyz\n",
+      "uvwy\n",
+      "uvwyx\n",
+      "uvwyz\n",
+      "uvwz\n",
+      "uvwzy\n",
+      "uvwzyx\n",
+      "uvx\n",
+      "uvxw\n",
+      "uvxwy\n",
+      "uvxwyz\n",
+      "uvxwz\n",
+      "uvxwzy\n",
+      "uvxy\n",
+      "uvxyw\n",
+      "uvxywz\n",
+      "uvxyz\n",
+      "uvxyzw\n",
+      "uw\n",
+      "uwv\n",
+      "uwvx\n",
+      "uwvxy\n",
+      "uwvxyz\n",
+      "uwx\n",
+      "uwxv\n",
+      "uwxy\n",
+      "uwxyz\n",
+      "uwy\n",
+      "uwyx\n",
+      "uwyxv\n",
+      "uwyz\n",
+      "uwz\n",
+      "uwzy\n",
+      "uwzyx\n",
+      "uwzyxv\n",
+      "ux\n",
+      "uxv\n",
+      "uxvw\n",
+      "uxvwy\n",
+      "uxvwyz\n",
+      "uxvwz\n",
+      "uxvwzy\n",
+      "uxw\n",
+      "uxwv\n",
+      "uxwy\n",
+      "uxwyz\n",
+      "uxwz\n",
+      "uxwzy\n",
+      "uxy\n",
+      "uxyw\n",
+      "uxywv\n",
+      "uxywz\n",
+      "uxyz\n",
+      "uxyzw\n",
+      "uxyzwv\n"
      ]
     }
    ],
    "source": [
-    "U = list_paths_from(G,u,[])\n",
-    "show_path_name(U)"
+    "paths_from_U = [[u]]\n",
+    "paths_from_U = list_paths_from(G,[u],paths_from_U)\n",
+    "show_all_paths(paths_from_U)"
    ]
   },
   {
