--- a/Notebooks/Graph_100.ipynb
+++ b/Notebooks/Graph_100.ipynb
@@ -1,12 +1,29 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Graph\n",
+    "Listing all paths from source to sink in an undirected weighted graph.  \n",
+    "Jason Miller.  "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Define the Graph\n",
+    "Represent the graph on page 377, Fig 5.3, of Kurose & Ross 7th ed."
    ]
   },
   {
@@ -68,8 +85,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Graph utility functions"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -91,86 +115,152 @@
     "        pname = pname + NODES[i]\n",
     "    return pname\n",
     "def show_all_paths(paths):\n",
+    "    c = 0\n",
     "    for p in paths:\n",
-    "        print(get_path_name(p))"
+    "        c = c+1\n",
+    "        print(c,get_path_name(p))\n",
+    "def list_paths_a_to_b(graph,a,b):\n",
+    "    paths_from_a = [[a]]\n",
+    "    paths_from_a = list_paths_from(G,[a],paths_from_a)\n",
+    "    paths_a_to_b = []\n",
+    "    for p in paths_from_a:\n",
+    "        if p[-1]==b:\n",
+    "            paths_a_to_b.append(p)\n",
+    "    show_all_paths(paths_a_to_b)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Graph exploration "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Long output, was used for debugging\n",
+    "paths_from_Y = [[y]]\n",
+    "paths_from_Y = list_paths_from(G,[y],paths_from_Y)\n",
+    "# show_all_paths(paths_from_Y)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "u\n",
-      "uv\n",
-      "uvw\n",
-      "uvwx\n",
-      "uvwxy\n",
-      "uvwxyz\n",
-      "uvwy\n",
-      "uvwyx\n",
-      "uvwyz\n",
-      "uvwz\n",
-      "uvwzy\n",
-      "uvwzyx\n",
-      "uvx\n",
-      "uvxw\n",
-      "uvxwy\n",
-      "uvxwyz\n",
-      "uvxwz\n",
-      "uvxwzy\n",
-      "uvxy\n",
-      "uvxyw\n",
-      "uvxywz\n",
-      "uvxyz\n",
-      "uvxyzw\n",
-      "uw\n",
-      "uwv\n",
-      "uwvx\n",
-      "uwvxy\n",
-      "uwvxyz\n",
-      "uwx\n",
-      "uwxv\n",
-      "uwxy\n",
-      "uwxyz\n",
-      "uwy\n",
-      "uwyx\n",
-      "uwyxv\n",
-      "uwyz\n",
-      "uwz\n",
-      "uwzy\n",
-      "uwzyx\n",
-      "uwzyxv\n",
-      "ux\n",
-      "uxv\n",
-      "uxvw\n",
-      "uxvwy\n",
-      "uxvwyz\n",
-      "uxvwz\n",
-      "uxvwzy\n",
-      "uxw\n",
-      "uxwv\n",
-      "uxwy\n",
-      "uxwyz\n",
-      "uxwz\n",
-      "uxwzy\n",
-      "uxy\n",
-      "uxyw\n",
-      "uxywv\n",
-      "uxywz\n",
-      "uxyz\n",
-      "uxyzw\n",
-      "uxyzwv\n"
+      "1 ywu\n",
+      "2 ywvu\n",
+      "3 ywvxu\n",
+      "4 ywxu\n",
+      "5 ywxvu\n",
+      "6 yxu\n",
+      "7 yxvu\n",
+      "8 yxvwu\n",
+      "9 yxwu\n",
+      "10 yxwvu\n",
+      "11 yzwu\n",
+      "12 yzwvu\n",
+      "13 yzwvxu\n",
+      "14 yzwxu\n",
+      "15 yzwxvu\n"
      ]
     }
    ],
    "source": [
-    "paths_from_U = [[u]]\n",
-    "paths_from_U = list_paths_from(G,[u],paths_from_U)\n",
-    "show_all_paths(paths_from_U)"
+    "list_paths_a_to_b(G,y,u)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1 xuvwyz\n",
+      "2 xuvwz\n",
+      "3 xuwyz\n",
+      "4 xuwz\n",
+      "5 xvuwyz\n",
+      "6 xvuwz\n",
+      "7 xvwyz\n",
+      "8 xvwz\n",
+      "9 xwyz\n",
+      "10 xwz\n",
+      "11 xywz\n",
+      "12 xyz\n"
+     ]
+    }
+   ],
+   "source": [
+    "list_paths_a_to_b(G,x,z)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1 zwu\n",
+      "2 zwvu\n",
+      "3 zwvxu\n",
+      "4 zwxu\n",
+      "5 zwxvu\n",
+      "6 zwyxu\n",
+      "7 zwyxvu\n",
+      "8 zywu\n",
+      "9 zywvu\n",
+      "10 zywvxu\n",
+      "11 zywxu\n",
+      "12 zywxvu\n",
+      "13 zyxu\n",
+      "14 zyxvu\n",
+      "15 zyxvwu\n",
+      "16 zyxwu\n",
+      "17 zyxwvu\n"
+     ]
+    }
+   ],
+   "source": [
+    "list_paths_a_to_b(G,z,u)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1 zw\n",
+      "2 zyw\n",
+      "3 zyxuvw\n",
+      "4 zyxuw\n",
+      "5 zyxvuw\n",
+      "6 zyxvw\n",
+      "7 zyxw\n"
+     ]
+    }
+   ],
+   "source": [
+    "list_paths_a_to_b(G,z,w)"
    ]
   },
   {
